@@ -1,34 +1,24 @@
-buildscript {
-    repositories {
-        gradlePluginPortal()
-        maven {
-            url "https://sandec.bintray.com/repo"
-        }
-    }
-
-    dependencies {
-        classpath 'com.sandec.jpro:jpro-plugin-gradle:2020.1.5'
-    }
-}
-
+import org.gradle.internal.os.OperatingSystem
 
 plugins {
-    id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.9'
-    id 'org.beryx.jlink' version '2.22.3'
+    id 'org.beryx.runtime' version '1.12.4'
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
 
 group 'com.icuxika'
 version '1.0.0'
 
-mainClassName = 'com.icuxika.MainApp'
-
 application {
+    applicationName = 'IMFrameworkFX'
+    mainClass.set('com.icuxika.Launcher')
     applicationDefaultJvmArgs = [
             '-XX:+UseZGC',
             '-XX:+ShowCodeDetailsInExceptionMessages',
             '-Dsun.java2d.opengl=true',
+            // 不添加此参数，打包成exe后，https协议的网络图片资源无法加载
+            '-Dhttps.protocols=TLSv1.1,TLSv1.2',
             '--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
             '--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
             '--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
@@ -74,16 +64,60 @@ test {
 }
 
 tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
+    options.encoding = 'UTF-8'
 }
 
-apply plugin: 'com.sandec.jpro'
+// 使用 https://badass-runtime-plugin.beryx.org/releases/latest/
+// 插件 Badass-Runtime plugin 需要将主类单独抽离出来，这里使用Launcher作为启动类，不然的话，会提示没有加载Java FX组件
+runtime {
+    options.set(['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages'])
+    modules.set([
+            'java.desktop',
+            'java.xml',
+            'jdk.unsupported',
+            'jdk.jfr',
+            'jdk.unsupported.desktop',
+            'java.datatransfer',
+            'java.scripting',
+            'java.rmi',
+            'java.sql',
+            'java.naming',
+            'java.compiler',
+            'java.logging',
+            'java.management'])
 
-jpro {
-    // for debugging
-    // JVMArgs << '-agentlib:jdwp=transport=dt_socket,server=n,address=5006,suspend=y'
-    JVMArgs << "--illegal-access=permit"
-    JVMArgs << '-Xmx1000m'
-    //jpro server port
-    port = 8080
+    launcher {
+        // 如果构建后无法启动并且无法知晓异常时，可以将此参数配置为false，
+        // 然后执行 gradle runtime，会得到bat方式的可执行程序，在cmd中运行对应bat，可以看到对应异常
+        noConsole = true
+    }
+
+    jpackage {
+        imageName = applicationName
+
+        def currentOS = OperatingSystem.current()
+        if (currentOS.isMacOsX()) {
+            imageOptions.addAll(['--icon', 'src/main/resources/application.icns'])
+        }
+        if (currentOS.isWindows()) {
+            imageOptions.addAll(['--icon', 'src/main/resources/application.ico'])
+            installerOptions.addAll([
+                    '--win-dir-chooser',
+                    '--win-menu',
+                    '--win-shortcut',
+                    '--install-dir',
+                    applicationName
+            ])
+        }
+        if (currentOS.isLinux()) {
+            imageOptions.addAll(['--icon', 'src/main/resources/application.png'])
+            installerOptions.addAll([
+                    '--linux-deb-maintainer',
+                    'icuxika@outlook.com',
+                    '--linux-menu-group',
+                    applicationName,
+                    '--linux-shortcut'
+            ])
+        }
+    }
 }
